--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,34 @@ ul {
   margin-top: -3px;
 }
 
-.inline-wrapper img {
+.inline-wrapper div {
   display: inline-block;
   width: 33%;
+  position: relative;
+}
+
+.inline-wrapper div img {
+  width: 100%;
   height: 300px;
+  transition: opacity .5s;
+}
+
+.inline-wrapper div h4 {
+  position: absolute;
+  top: 50%;
+  opacity: 0;
+  transition: opacity .5s;
+  text-align: center;
+  width: 100%;
+  font-size: 43px;
+  margin: 0;
+  transform: translateY(-50%);
+}
+
+.inline-wrapper div:hover h4 {
+  opacity: 1;
+}
+
+.inline-wrapper div:hover img {
+  opacity: .3;
 }
